--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "start": "./node_modules/.bin/ts-node ./src/app.ts",
     "test": "mocha",
-    "apidocs": "apidoc -i ./src -o ./apidocs & .\\apidocs\\index.html"
+    "apidocs": "apidoc -i ./src -o ./apidocs & ./apidocs/index.html"
   },
   "apidoc": {
-    "title": "toy project apidoc",
-    "url": "https://localhost:80"
+    "title": "cdton apidoc",
+    "url": "https://localhost:30704"
   },
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
